# SK_PROJ

./: CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  SK_PROJ  SK_PROJ.cbp  cmake_install.cmake  main.cpp
Klient/: dependency-reduced-pom.xml  pom.xml
Klient/src/main/java/app/: AddQuestionController.java  AnswerPanelController.java  Connection.java  Game.java  GameOwner.java  GameOwnerController.java  GameOwnerSummaryController.java  Main.java  MainSceneContoller.java  Player.java  PlayerSummaryController.java  Question.java
Klient/src/main/resources/: addQuestion.fxml  answerPanel.fxml  gameOwner.fxml  mainScene.fxml
Serwer/: Client.cpp  Client.h  EpollContainer.cpp  EpollContainer.h  Game.cpp  Game.h  GameOwner.cpp  GameOwner.h  Player.cpp  Player.h  Question.cpp  Question.h  Server.cpp  Server.h  utils.cpp  utils.h
